Fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -753,6 +753,67 @@ body {
           border-radius: 2vw;
           font-family: 'VT323', monospace;
           font-size: 2rem;
+          color: #fff; }
+        body main #tempUpgrade .modal {
+          position: fixed;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(0, 0, 0, 0.5);
+          opacity: 0;
+          visibility: hidden;
+          -webkit-transform: scale(1.1);
+                  transform: scale(1.1);
+          -webkit-transition: visibility 0s linear 0.25s, opacity 0.25s 0s, -webkit-transform 0.25s;
+          transition: visibility 0s linear 0.25s, opacity 0.25s 0s, -webkit-transform 0.25s;
+          transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+          transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s, -webkit-transform 0.25s; }
+        body main #tempUpgrade .modal-content {
+          text-align: center;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          -webkit-transform: translate(-50%, -50%);
+                  transform: translate(-50%, -50%);
+          background-color: #414562;
+          font-family: 'VT323', monospace;
+          border: black 3px solid;
+          font-size: 1.7rem;
+          color: white;
+          padding: 1rem 1.5rem;
+          width: 24rem;
+          border-radius: 0.5rem; }
+        body main #tempUpgrade .close-button {
+          float: right;
+          width: 1.5rem;
+          line-height: 1.5rem;
+          text-align: center;
+          cursor: pointer;
+          border-radius: 0.25rem;
+          color: black;
+          background-color: #bb94f8;
+          border: 3px black solid; }
+        body main #tempUpgrade .close-button:hover {
+          background-color: darkgray; }
+        body main #tempUpgrade .show-modal {
+          opacity: 1;
+          visibility: visible;
+          -webkit-transform: scale(1);
+                  transform: scale(1);
+          -webkit-transition: visibility 0s linear 0s, opacity 0.25s 0s, -webkit-transform 0.25s;
+          transition: visibility 0s linear 0s, opacity 0.25s 0s, -webkit-transform 0.25s;
+          transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+          transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s, -webkit-transform 0.25s; }
+        body main #tempUpgrade .trigger {
+          margin-top: 2vh;
+          margin-bottom: 2vh;
+          background: #e83d4e;
+          height: 4vh;
+          border: none;
+          border-radius: 2vw;
+          font-family: 'VT323', monospace;
+          font-size: 2rem;
           color: #fff; } }
 
 @media only screen and (min-width: 1024px) {
